--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,7 +239,7 @@
     <string name="download_view_size">Size: %s KB</string>
     <string name="share">Share with…</string>
     <string name="back">Back</string>
-    <string name="loadingError">Error getting list of install/uninstall.\nCannot access Internet, or server bug</string>
+    <string name="loadingError">Error getting list of installers/uninstallers.\nCannot access Internet, or server bug</string>
     <string name="info">Info</string>
     <string name="infoInstaller">
         Name: %1$s
