--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -324,6 +324,7 @@
     <string name="hour3">3 hours</string>
     <string name="hour4">4 hours</string>
     <string name="hour5">5 hours</string>
+    <string name="hour6">6 hours</string>
     <string name="hour24">Every day</string>
 
 </resources>
