--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -283,7 +283,7 @@
     <string name="md_cancel_label">取消</string>
     <string name="md_choose_label">選取</string>
     <string name="md_error_label">錯誤</string>
-    <string name="md_storage_perm_error">您的應用程式未被授予 READ_EXTERNAL_STORAGE 權限。</string>
+    <string name="md_storage_perm_error">您的應用程式未被授予\'外部儲存空間\'權限。</string>
     <string name="md_custom_label">自訂</string>
     <string name="md_presets_label">預設</string>
     <string name="changelog">更新日誌</string>
@@ -326,4 +326,10 @@
     <string name="hour5">5 小時</string>
     <string name="hour6">6 小時</string>
     <string name="hour24">每天</string>
+    <string name="confirm_reboots">重新啟動確認</string>
+    <string name="skip_xposedminversion_check">略過 \'Xposed 最低版本\' 檢查</string>
+    <string name="skip_xposedminversion_check_summ">略過模組 \'Xposed 最低版本\' 檢查</string>
+    <string name="detected_as">檢測 SDK： %1$d, CPU架構： %2$s</string>
+    
+    
 </resources>
