--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,20 +334,21 @@
     <string name="official">Official</string>
     <string name="systemless">Systemless</string>
     <string name="samsung">Samsung</string>
-    <string name="huawei">Huawei</string>
+    <string name="miui">MIUI</string>
     <string name="official_compatibility">All AOSP ROM, Nexus, LG, HTC, Asus devices</string>
     <string name="official_incompatibility">Samsung ROMs</string>
     <string name="systemless_compatibility">All AOSP-based ROMs, Samsung ROMs, LG, HTC, Asus devices</string>
     <string name="samsung_compatibility">Only Samsung ROMs. <b>Note: alt</b> version is for Samsung Note phones</string>
     <string name="samsung_incompatibility">All other ROMs</string>
-    <string name="huawei_compatibility">Only Huawei ROMs</string>
-    <string name="huawei_incompatibility">All other ROMs</string>
+    <string name="miui_compatibility">Only MIUI ROMs</string>
+    <string name="miui_incompatibility">All other ROMs</string>
     <string name="compatibility">Compatibility</string>
     <string name="no_incompatibility">No incompatibility</string>
 
     <string name="details">Details</string>
     <string name="look_and_feel">Look and feel</string>
-    <string name="no_connection_available">No connection available. Cannot download frameworks or modules.</string>
     <string name="support_xda">Get support on XDA thread</string>
+    <string name="android_sdk">Android %1$s %2$s (API %3$d)</string>
+    <string name="later">Later</string>
 
 </resources>
