--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -209,13 +209,12 @@
     <string name="export_modules">Exportar lista de módulos ativos</string>
     <string name="file_is_empty">O ficheiro está vazio</string>
     <string name="help">Ajuda</string>
-    <string name="helpChoose">Como escolher o ficheiro zip correto?\n          xposed-v*-sdk%%SDK%%-%%ARCH%%\n\n          Onde:\n         %%SDK%% é a sua versão SDK do Android\n\n         %%ARCH%% é a arquitetura do CPU do seu dispositivo</string>
     <string name="import_">Importar...</string>
     <string name="import_enabled_modules">Importar lista de módulos ativos</string>
     <string name="import_installed_modules">Importar lista de módulos instalados</string>
     <string name="import_modules">Importar lista de módulos </string>
     <string name="info">Informação</string>
-    <string name="infoInstaller">Nome: %1$s         \nSDK: %2$d         \nArquitetura: %3$s         \nVersão: %4$s</string>
+    <string name="infoInstaller">Nome: %1$s         \nSDK: %2$s         \nArquitetura: %3$s         \nVersão: %4$s</string>
     <string name="infoUninstaller">Nome: %1$s         \nArquitetura: %2$s         \nData: %3$s</string>
     <string name="install_remove">Instalar e remover</string>
 
