--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,7 +243,7 @@
     <string name="info">Info</string>
     <string name="infoInstaller">
         Name: %1$s
-        \nSDK: %2$d
+        \nSDK: %2$s
         \nArchitecture: %3$s
         \nVersion: %4$s
     </string>
@@ -260,18 +260,8 @@
     <string name="xposedZipNotFound">Zip not found, probably a new version released.</string>
     <string name="warningArchitecture">HAVE YOU CHOSEN RIGHT XPOSED ZIP ARCHITECTURE?\nWrong zip can damage your phone!</string>
     <string name="help">Help</string>
-    <string name="helpChoose">
-        How to choose correct zip file?\n
-
-        xposed-v*-sdk%%SDK%%-%%ARCH%%\n\n
-
-        Where:\n
-        %%SDK%% is your Android SDK version\n\n
-        %%ARCH%% is your device CPU architecture
-    </string>
     <string name="newVersion">New version of Xposed Installer is available! Update it!</string>
     <string name="update">Update</string>
-
 
     <string name="installationForbidden">Installation is not possible on this device. To install Xposed through this app, the device must run Android Lollipop or higher.</string>
     <string name="installed_no_lollipop">Xposed Framework is installed.</string>
@@ -318,35 +308,19 @@
     <string name="xposed_on_next_reboot">Xposed Framework will be enabled on next reboot</string>
     <string name="xposed_off_next_reboot">Xposed Framework will be disabled on next reboot</string>
 
-
-    <string name="hour1">1 hour</string>
-    <string name="hour2">2 hours</string>
-    <string name="hour3">3 hours</string>
-    <string name="hour4">4 hours</string>
-    <string name="hour5">5 hours</string>
-    <string name="hour6">6 hours</string>
-    <string name="hour24">Every day</string>
-    <string name="off">Never</string>
-
     <string name="skip_xposedminversion_check">Skip \'xposedminversion\' check</string>
     <string name="skip_xposedminversion_check_summ">Skip \'xposedminversion\' check for modules</string>
-    <string name="detected_as">Detected SDK: %1$d, ARCH: %2$s</string>
-    <string name="official">Official</string>
+
+    <string name="classic">Classic</string>
     <string name="systemless">Systemless</string>
-    <string name="samsung">Samsung</string>
-    <string name="miui">MIUI</string>
 
     <!-- Start compatibility -->
-    <string name="official_compatibility">All AOSP and Samsung ROM, Nexus, LG, HTC, Asus devices</string>
-    <string name="official_incompatibility">No incompatibility</string>
-    <string name="official_compatibility_v21">All AOSP ROM, Nexus, LG, HTC, Huawei, Asus devices</string>
-    <string name="official_incompatibility_v21">Samsung ROMs</string>
-    <string name="systemless_compatibility">All AOSP-based ROMs, Samsung ROMs, LG, HTC, Asus, Pixel C devices</string>
-    <string name="systemless_incompatibility">No incompatibility</string>
-    <string name="samsung_compatibility">All AOSP and Samsung ROM, Nexus, LG, HTC, Asus devices. <b>Note: alt</b> version is for Samsung Note phones</string>
-    <string name="samsung_incompatibility">No incompatibility</string>
-    <string name="miui_compatibility">Only MIUI ROMs</string>
-    <string name="miui_incompatibility">All other ROMs</string>
+    <string name="classic_compatibility">All AOSP and Samsung ROM, Nexus, LG, HTC, Asus devices</string>
+    <string name="classic_incompatibility">No incompatibility</string>
+    <string name="classic_compatibility_v21">All AOSP ROM, Nexus, LG, HTC, Huawei, Asus devices</string>
+    <string name="classic_incompatibility_v21">Samsung ROMs</string>
+    <string name="systemless_compatibility">---------</string>
+    <string name="systemless_incompatibility">------------</string>
     <!-- End compatibility -->
 
     <string name="compatibility">Compatibility</string>
@@ -354,10 +328,6 @@
 
     <string name="support_xda">Get support on XDA thread</string>
     <string name="android_sdk">Android %1$s %2$s (API %3$d)</string>
-    <string name="later">Later</string>
-    <string name="device_own">You own a %1$s device with a %2$s ROM.</string>
-    <string name="original_framework">Your device is compatible with the official Xposed Framework.</string>
-    <string name="goto_framework">Click here to go to the right section for your device</string>
     <string name="save">Save</string>
 
 </resources>
